# serum-dex

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  bpf-sdk-install.sh  do.sh
assert-owner/: Cargo.toml  README.md  program-id.md
assert-owner/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/dev/: faucet.rs  mod.rs
common/: Cargo.toml
common/client/: Cargo.toml
common/client/src/: lib.rs  rpc.rs
common/src/: accounts.rs  lib.rs  pack.rs  program.rs  rpc.rs
common/src/client/: mod.rs  rpc.rs
common/tests/: Cargo.toml
common/tests/src/: lib.rs
context/: Cargo.toml
context/src/: lib.rs
crank/: Cargo.toml
crank/src/: lib.rs  main.rs
dex/: .gitignore  Anchor.toml  Cargo.toml  README.md
dex/crank/: Cargo.toml
dex/crank/src/: lib.rs  token_instruction.rs
dex/fuzz/: Cargo.toml
dex/fuzz/fuzz_targets/: multiple_orders.rs  single_order.rs
dex/fuzz/src/: lib.rs
dex/permissioned/: Cargo.toml
dex/permissioned/src/: lib.rs  middleware.rs  proxy.rs
dex/proptest-regressions/: fees.txt  instruction.txt
dex/src/: critbit.rs  error.rs  events.rs  fees.rs  instruction.rs  lib.rs  matching.rs  pruning.rs  state.rs  tests.rs  utils.rs
dex/tests/close-markets/: Anchor.toml  package-lock.json  package.json  readme.md
dex/tests/permissioned/: Anchor.toml  package.json
etf/: Cargo.toml
etf/js/: README.md  package-lock.json  package.json
etf/js/cli/: main.js  token-etf-test.js
etf/js/client/: token-etf.js
etf/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
lockup/: Cargo.toml  Makefile  README.md
lockup/cli/: Cargo.toml
lockup/cli/src/: lib.rs
lockup/client/: Cargo.toml
lockup/client/src/: inner.rs  lib.rs
lockup/program/: Cargo.toml
lockup/program/src/: access_control.rs  available_for_withdrawal.rs  claim.rs  create_vesting.rs  deposit.rs  initialize.rs  lib.rs  migrate.rs  redeem.rs  set_authority.rs  whitelist_add.rs  whitelist_delete.rs  whitelist_deposit.rs  whitelist_withdraw.rs  withdraw.rs
lockup/src/: error.rs  lib.rs
lockup/src/accounts/: mod.rs  safe.rs  token_vault.rs  vault.rs  vesting.rs  whitelist.rs
lockup/tests/: initialize.rs  lifecycle.rs  migrate.rs  set-authority.rs
lockup/tests/common/: blockchain.rs  lifecycle.rs  mod.rs
lockup/tests/stake/: Cargo.toml  Makefile
node/: Cargo.toml
node/context/: Cargo.toml
node/context/src/: lib.rs
node/crank/: Cargo.toml
node/crank/src/: dispatch.rs  lib.rs
node/dev/: Cargo.toml
node/dev/src/: lib.rs
node/json-rpc/: Cargo.toml
node/json-rpc/src/: lib.rs
node/lockup/: Cargo.toml
node/lockup/src/: lib.rs
node/lockups/: Cargo.toml
node/lockups/src/: lib.rs
node/logging/: Cargo.toml
node/logging/src/: lib.rs
node/registry/: Cargo.toml
node/registry/src/: api.rs  dispatch.rs  lib.rs
node/src/: lib.rs
pool/: Cargo.toml  README.md  build.rs
pool-schema/: Cargo.toml
pool-schema/src/: lib.rs  print-schema.rs  schema.rs
pool/client/: Cargo.toml  build.rs
pool/client/src/: main.rs  schema.rs
pool/examples/admin-controlled/: Cargo.toml
pool/examples/simple/: Cargo.toml
pool/schema/: Cargo.toml  common.capnp  cpi.capnp  pool.capnp  pool_proxy.capnp
pool/schema/src/: print-schema.rs  schema.rs
pool/src/: .lib.rs.swp  context.rs  lib.rs  pool.rs  schema.rs
registry/: Cargo.toml  Makefile  README.md
registry/cli/: Cargo.toml
registry/cli/src/: lib.rs
registry/client/: Cargo.toml
registry/client/src/: inner.rs  lib.rs
registry/meta-entity/: Cargo.toml  Makefile
registry/meta-entity/program/: Cargo.toml
registry/meta-entity/src/: error.rs  lib.rs
registry/program/: Cargo.toml
registry/program/src/: claim_locked_reward.rs  claim_unlocked_reward.rs  collect_rewards.rs  common.rs  create_entity.rs  create_member.rs  deposit.rs  donate.rs  drop_locked_reward.rs  drop_pool_reward.rs  drop_unlocked_reward.rs  end_stake_withdrawal.rs  entity.rs  expire_locked_reward.rs  expire_unlocked_reward.rs  initialize.rs  join_entity.rs  lib.rs  mark_generation.rs  pool.rs  register_capability.rs  set_rewards.rs  slash.rs  stake.rs  stake_intent.rs  stake_intent_withdrawal.rs  start_stake_withdrawal.rs  switch_entity.rs  transfer_stake_intent.rs  update_entity.rs  update_member.rs  update_registrar.rs  withdraw.rs
registry/rewards/: Cargo.toml  Makefile
registry/rewards/cli/: Cargo.toml
registry/rewards/client/: Cargo.toml
registry/rewards/program/: Cargo.toml
registry/rewards/src/: error.rs  lib.rs  logs.rs
registry/rewards/tests/: lifecycle.rs
registry/src/: access_control.rs  client_ext.rs  error.rs  lib.rs  rewards.rs
registry/src/accounts/: entity.rs  generation.rs  locked_reward.rs  locked_reward_vendor.rs  member.rs  mod.rs  pending_withdrawal.rs  registrar.rs  registry.rs  reward_queue.rs  ring.rs  stake.rs  unlocked_reward_vendor.rs  vault.rs
registry/stake/: Cargo.toml  Makefile
registry/stake/program/: Cargo.toml
registry/stake/src/: error.rs  instruction.rs  lib.rs
registry/tests/: lifecycle.rs
registry/tests/common/: mod.rs
retbuf/: Cargo.toml
retbuf/src/: .lib.rs.swp  lib.rs
safe/: Cargo.toml  Makefile
safe/cli/: .dev.yaml  Cargo.toml  Makefile
safe/cli/src/: lib.rs  main.rs
safe/program/: Cargo.toml  Makefile
safe/program/interface/: Cargo.toml  file.txt
safe/program/src/: accounts.rs  api.rs  burn.rs  claim.rs  deposit.rs  error.rs  initialize.rs  lib.rs  migrate.rs  mint.rs  redeem.rs  set_authority.rs  whitelist_add.rs  whitelist_delete.rs  whitelist_deposit.rs  whitelist_withdraw.rs  withdraw.rs
safe/src/: accounts.rs  client_ext.rs  coder.rs  error.rs  lib.rs  pack.rs
safe/src/accounts/: lsrm_receipt.rs  mint_receipt.rs  mod.rs  safe.rs  safe_account.rs  vault.rs  vesting.rs  vesting_account.rs
safe/tests/: burn-locked.rs  deposit.rs  e2e.rs  initialize.rs  lifecycle.rs  migrate.rs  mint-locked.rs  mint-lsrm.rs  set-authority.rs  solana.rs  whitelist.rs  withdraw.rs
safe/tests/common/: assert.rs  (+3 more)
solana-client-gen/: Cargo.toml
solana-client-gen/codegen/: Cargo.toml
solana-client-gen/src/: coder.rs  lib.rs
(+93 files in other folders)
