[workspace]
members = [
    "assert-owner",
    "solana-client-gen",
    "common",
    "common/tests",
    "crank",
    "context",
    "pool",
    "pool/schema",
    "pool/examples/admin-controlled",
    "pool/examples/simple",
    "registry",
    "registry/cli",
    "registry/client",
    "registry/meta-entity",
    "registry/rewards",
    "lockup",
    "lockup/cli",
    "lockup/client",
    "node",
    "node/json-rpc",
    "node/logging",
    "node/crank",
    "cli"
]
exclude = [
    "dex",
    "retbuf",
    "registry/program",
    "registry/meta-entity/program",
    "retbuf",
    "lockup/program",
]
