[package]
name = "serum-cli"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[[bin]]
name = "serum"
path = "src/main.rs"

[features]
dev = ["serum-common", "serum_dex", "solana-sdk", "serde_json", "spl-token", "solana-client"]
default = []


[dependencies]
anyhow = "1.0.32"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
crank = { path = "../dex/crank" }
serum-context = { path = "../context" }

# Dev feature flag.
serum-common = { path = "../common", optional = true }
serum_dex = { path = "../dex", default-features = false, features = ["client"], optional = true }
solana-sdk = { version = "1.3.14", optional = true }
serde_json = { version = "1.0.59", optional = true }
spl-token = { version = "2.0.6", optional = true }
solana-client = { version = "1.4.4", optional = true }