[package]
name = "serum-common"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
program = ["spl-token/program", "solana-sdk/program"]
client = ["spl-token/default", "solana-sdk/default", "solana-client", "anyhow", "rand"]

[dependencies]
spl-token = { version = "=2.0.3", default-features = false }
arrayref = "0.3.6"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = { version = "=1.3.9", default-features = false }

# Client only.
anyhow = { version = "1.0.32", optional = true }
rand = { version = "0.7.3", optional = true }
solana-client = { version = "1.3.4", optional = true }