[package]
name = "serum-common"
version = "0.1.0"
description = "Serum common utilities"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["spl-token/program", "solana-sdk/program", "solana-program"]
client = ["spl-token/default", "solana-sdk/default", "solana-client", "anyhow", "rand", "serde_json", "bs58", "bincode"]
strict = []
devnet = []
default = []

[dependencies]
spl-token = { version = "2.0.6", default-features = false }
arrayref = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = { version = "1.3.14", default-features = false }
serum-borsh = "0.8.1-serum.1"

# Program only.
solana-program = { version = "1.4.3", optional = true }

# Client only.
anyhow = { version = "1.0.32", optional = true }
rand = { version = "0.7.3", optional = true }
solana-client = { version = "1.3.14", optional = true }
serde_json = { version = "1.0.56", optional = true }
bs58 = { version = "0.3.1", optional = true }
bincode = { version = "1.3.1", optional = true }
