[package]
name = "serum-context"
version = "0.1.0"
description = "Serum Context"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
solana-sdk = "1.3.9"
anyhow = "1.0.32"
dirs = "3.0"
serde = "1.0"
serde_yaml = "0.8"
solana-client = "1.5.0"
serum-common = { path = "../common" }