[package]
name = "crank"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum_dex = { path = "../dex", features = ["client"] }
serum-common = { path = "../common" }
spl-token = { version = "=2.0.3", default-features = false }
clap = "3.0.0-beta.1"
solana-client = "1.3.4"
solana-sdk = "1.3.4"
anyhow = "1.0.32"
rand = "0.7.3"
safe-transmute = "0.11.0"
threadpool = "1.8.1"
sloggers = "1.0"
slog-scope = "4.3"
slog-stdlog = "4"
log = "0.4"
tungstenite = {version="0.1", default-features=false}
