# Note: This crate must be built using do.sh

[package]
name = "serum_dex"
version = "0.3.0"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"
license = "Apache-2.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]

[features]
program = []
client = []
fuzz = ["arbitrary"]
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
solana-program = "1.5.5"
spl-token = { version = "3.0.0-pre1", features = ["no-entrypoint"] }
serde = "1.0.114"
itertools = "0.9.0"
without-alloc = "0.2.1"
num_enum = "0.5.0"
static_assertions = "1.1.0"
bincode = "1.3.1"
enumflags2 = "0.6.4"
field-offset = "0.3.1"
thiserror = "1.0.20"
safe-transmute = "0.11.0"
arbitrary = { version = "0.4.6", features = ["derive"], optional = true }
num-traits = "0.2.12"
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
byteorder = "1.3.4"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
rand = "0.7.3"
hexdump = "0.1.0"
proptest = "0.10.0"
proptest-derive = "0.2.0"
bumpalo = { version = "3.4.0", features = ["collections"] }

[profile.release]
lto = true

[profile.test]
opt-level = 2
