# Note: This crate must be built using do.sh

[package]
name = "serum_etf"
version = "0.1.0"
description = "Basic solana etf pool implementation"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default", "spl-token/default"]

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "1.3.9", default-features = false, optional = true }
spl-token = { version = "=2.0.3", default-features = false }
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0"}

[lib]
name = "serum_etf"
crate-type = ["cdylib", "lib"]
