[package]
name = "pool-schema"
version = "0.1.0"
authors = ["Sebastian Conybeare <sebastian@projectserum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
borsh = "0.7.1"

[[bin]]
name = "print-schema"
path = "src/print-schema.rs"
