# Note: This crate must be built using do.sh

[package]
name = "serum-pool"
version = "0.1.0"
description = "Solana pool spec"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default", "spl-token/default"]

[dependencies]
arrayref = "0.3.6"
solana-sdk = { version = "1.3.9", default-features = false, optional = true }
spl-token = { version = "=2.0.6", default-features = false }
capnp = "0.13.3"
thiserror = "1.0.20"
zerocopy = "0.3.0"
bytemuck = "1.4.1"
slice-of-array = "0.2.1"

[lib]
name = "serum_pool"
crate-type = ["cdylib", "lib"]

[build-dependencies]
capnpc = "0.13.1"
