[package]
name = "serum-registry"
version = "0.1.0"
description = "Serum Registry"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-client-gen/program", "spl-token/program", "serum-common/program"]
client = ["solana-client-gen/client", "spl-token/default", "serum-common/client", "lazy_static"]
test = []
strict = []

[dependencies]
thiserror = "1.0.20"
bytemuck = "1.4.0"
arrayref = "0.3.6"
spl-token = { version = "2.0.6", default-features = false }
solana-client-gen = { path = "../solana-client-gen" }
serum-common = { path = "../common" }

# Forks.
serum-borsh = { git = "https://github.com/project-serum/borsh", branch = "serum" }

# Client only.
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
serum-registry-client = { path = "./client" }
serum-lockup-client = { path = "../lockup/client" }
serum-lockup = { path = "../lockup" }
serum-common-tests = { path = "../common/tests" }
rand = { version = "0.7.3" }
