# Note: This crate must be built using do.sh

[package]
name = "serum_retbuf"
version = "0.1.0"
description = "Retbuf"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-sdk/program"]
default = []

[dependencies]
solana-sdk = { version = "=1.3.9", default-features = false }
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_retbuf"

[dev-dependencies]

[profile.release]
lto = true
