[package]
name = "serum-safe"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
program = ["solana-client-gen/program", "spl-token/program"]
client = ["solana-client-gen/client", "spl-token/default", "serum-common-client"]
client-ext = []
test = ["rand", "solana-transaction-status", "solana-client-gen/client", "solana-client", "spl-token/default"]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
solana-client-gen = { path = "../solana-client-gen" }
spl-token = { version = "=2.0.3", default-features = false }
arrayref = "0.3.6"
num_enum = "0.5.0"
thiserror = "1.0.20"
byteorder = "1.3.4"

# Used for testing.
rand = { version = "0.7.3", optional = true }
solana-sdk = { version = "=1.3.9", default-features = false, optional = true }
solana-transaction-status = { version = "1.3.9", optional = true }
solana-client = { version = "1.3.4", optional = true }
serum-common-client = { path = "../common/client", optional = true }
