[package]
name = "serum-safe"
version = "0.1.0"
description = "Serum Safe"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-client-gen/program", "spl-token/program", "serum-common/program"]
client = ["solana-client-gen/client", "spl-token/default", "serum-common/client"]
client-ext = []
test = ["rand", "solana-client-gen/client", "spl-token/default"]
strict = []
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spl-token = { version = "=2.0.3", default-features = false }
num_enum = "0.5.0"
thiserror = "1.0.20"
solana-client-gen = { path = "../solana-client-gen" }
serum-common = { path = "../common" }
bytemuck = "1.4.0"

# Used for testing.
rand = { version = "0.7.3", optional = true }
