[package]
name = "solana-client-gen"
version = "0.1.0"
description = "Macro generating clients for Solana programs"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-sdk/program"]
client = ["solana-sdk/default", "solana-client", "rand", "codegen", "anyhow"]
client-extension = ["solana-sdk/default", "solana-client", "rand", "codegen", "anyhow"]
default = []

[dependencies]
bincode = "1.3.1"
thiserror = "1.0.20"
solana-sdk = { version = "1.3.14", default-features = false }
serum-common = { path = "../common" }

# Client only.
solana-client = { version = "1.3.14", optional = true }
rand = { version = "0.7.3", optional = true }
codegen = { path = "./codegen", optional = true }
anyhow = { version = "1.0.32", optional = true }
