[package]
name = "serum-common-tests"
version = "0.1.0"
description = "Serum common test utilities"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
strict = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
solana-client-gen = { path = "../../solana-client-gen", features = ["client"] }
serum-common = { path = "../", features = ["client"] }