[package]
name = "serum-lockup-cli"
version = "0.1.0"
description = "Serum Lockup CLI"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-context = { path = "../../context" }
serum-common = { path = "../../common" }
serum-lockup = { path = "../", features = ["client"] }
serum-lockup-client = { path = "../client" }
solana-client-gen = { path = "../../solana-client-gen" }
spl-token = { version = "2.0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
serde_json = "1.0.59"