[package]
name = "serum-lockup-client"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[dependencies]
serum-lockup = { path = "../", features = ["client"] }
solana-client-gen = { path = "../../solana-client-gen" }
anyhow = "1.0.32"
thiserror = "1.0.20"
serum-common = { path = "../../common" }
solana-client = { version = "1.3.14" }
spl-token = { version = "2.0.6", default-features = false }