[package]
name = "serum-lockup-program"
version = "0.1.0"
description = "Serum Lockup Solana program"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_lockup_program"

[features]
program = ["serum-lockup/program", "solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
test = ["solana-sdk/default"]
strict = []
default = []

[dependencies]
solana-sdk = { version = "1.3.14", default-features = false }
spl-token = { version = "2.0.6", default-features = false }
serum-lockup = { path = "../" }
serum-common = { path = "../../common", features = ["program"] }
solana-program = "1.4.3"

[profile.release]
lto = true

[profile.test]
opt-level = 2
