[package]
name = "serum-node-context"
version = "0.1.0"
description = "Serum Node Context"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-common = { path = "../../common" }
clap = "3.0.0-beta.1"
solana-sdk = "1.3.9"
solana-client-gen = { path = "../../solana-client-gen" }
anyhow = "1.0.32"
dirs = "3.0"
