[package]
name = "serum-node-crank"
version = "0.1.0"
description = "Serum Node Crank"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-node-logging = { path = "../logging" }
serum-node-context = { path = "../context" }
crank = { path = "../../crank", version = "0.2" }
solana-sdk = "1.3.9"
tokio = "0.2.22"
futures = "0.3"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.7.3"
clap = "3.0.0-beta.1"