[package]
name = "serum-node-json-rpc"
version = "0.1.0"
description = "Serum Node JSON RPC"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-node-logging = { path = "../logging" }
serum-node-crank = { path = "../crank" }
jsonrpc-core = "15.0.0"
jsonrpc-derive = "15.0.0"
jsonrpc-http-server = "15.0.0"
jsonrpc-core-client = "15.0.0"
tokio = "0.2.22"
futures = { version = "0.3", features = ["compat"] }
anyhow = "1.0.32"
num_enum = "0.5.0"
thiserror = "1.0.20"
clap = "3.0.0-beta.1"
