[package]
name = "serum-node-lockup"
version = "0.1.0"
description = "Serum Node Lockup"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-node-logging = { path = "../logging" }
serum-node-context = { path = "../context" }
serum-common = { path = "../../common" }
serum-lockup-cli = { path = "../../lockup/cli" }
solana-client-gen = { path = "../../solana-client-gen" }
spl-token = { version = "2.0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
