[package]
name = "serum-node-logging"
version = "0.1.0"
description = "Serum Node Logging"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
trace = ["slog/max_level_trace", "slog/release_max_level_warn"]
default = []

[dependencies]
slog = "2.5.2"
slog-term = "2"
slog-json = "2.3.0"
slog-async = "2"
slog-stream = "1.2.1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.1"
