[package]
name = "serum-node-registry"
version = "0.1.0"
description = "Serum Node Registry"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[dependencies]
serum-node-logging = { path = "../logging" }
serum-node-context = { path = "../context" }
serum-common = { path = "../../common" }
serum-registry = { path = "../../registry", features = ["client"] }
serum-registry-cli = { path = "../../registry/cli" }
solana-client-gen = { path = "../../solana-client-gen" }
spl-token = { version = "2.0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2.22"
futures = "0.3"
anyhow = "1.0.32"
solana-sdk = "1.3.9"
solana-client = "1.3.14"
crossbeam = "0.7.3"
clap = "3.0.0-beta.1"
