[package]
name = "serum-pool-client"
version = "0.1.0"
authors = ["Sebastian Conybeare <sebastian@projectserum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "2.33.3"
solana-client = "1.3.14"
solana-sdk = "1.3.14"
structopt = "0.3.18"
capnp = "0.13.3"
arrayref = "0.3.6"

[build-dependencies]
capnpc = "0.13.1"
