[package]
name = "serum-pool-client"
version = "0.1.0"
authors = ["Sebastian Conybeare <sebastian@projectserum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "2.33.3"
solana-client = "1.3.14"
solana-sdk = "1.3.14"
structopt = "0.3.18"
arrayref = "0.3.6"
serum-pool-schema = { version = "0.1.0", path = "../schema" }
borsh = "0.7.1"
solana-cli-config = "1.3.14"
